@@ -890,9 +890,8 @@ rename_file_cb(const char new_name[])
 	}
 
 	/* Rename file in internal structures for correct positioning of cursor after
-	 * reloading, as cursor will be positioned on the file with the same name.
-	 * TODO: maybe create a function in ui or filelist to do this. */
-	(void)replace_string(&entry->name, new);
+	 * reloading, as cursor will be positioned on the file with the same name. */
+	fentry_rename(entry, new);
 
 	ui_view_schedule_reload(curr_view);
 }
@@ -1076,10 +1075,9 @@ perform_renaming(FileView *view, char **files, int *is_dup, int len,
 				const char *const new_name = get_last_path_component(list[i]);
 
 				/* For regular views rename file in internal structures for correct
-				 * positioning of cursor after reloading, as cursor will be positioned
-				 * on the file with the same name.  For custom views rename to prevent
-				 * files from disappearing. */
-				(void)replace_string(&entry->name, new_name);
+				 * positioning of cursor after reloading. For custom views rename to
+				 * prevent files from disappearing. */
+				fentry_rename(entry, new_name);
 
 				if(flist_custom_active(view))
 				{
@@ -1087,7 +1085,7 @@ perform_renaming(FileView *view, char **files, int *is_dup, int len,
 							view->custom.entry_count, path);
 					if(entry != NULL)
 					{
-						(void)replace_string(&entry->name, new_name);
+						fentry_rename(entry, new_name);
 					}
 				}
 			}
@@ -2961,7 +2959,7 @@ rename_marked(FileView *view, const char desc[], const char lhs[],
 	return 1;
 }
 
-/* Updates renamed entry name when it makes sense.  This is besically to allow
+/* Updates renamed entry name when it makes sense.  This is basically to allow
  * correct cursor positioning on view reload or correct custom view update. */
 static void
 fixup_entry_after_rename(FileView *view, dir_entry_t *entry,
@@ -2969,10 +2967,7 @@ fixup_entry_after_rename(FileView *view, dir_entry_t *entry,
 {
 	if(entry_to_pos(view, entry) == view->list_pos || flist_custom_active(view))
 	{
-		/* Rename file in internal structures for correct positioning of cursor
-		 * after reloading, as cursor will be positioned on the file with the same
-		 * name. */
-		(void)replace_string(&entry->name, new_fname);
+		fentry_rename(entry, new_fname);
 	}
 }
 
